# cowel

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  check-clang-tidy.sh  eslint.config.js  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  tsconfig.test.json
.github/: codecov.yml  copilot-instructions.md  lang-summary.md
.github/ISSUE_TEMPLATE/: cowel-bug.md
.github/instructions/: lsp-integration-tests.instructions.md  new-directive.instructions.md  new-lexer-feature.instructions.md
.github/workflows/: clang-format.yml  cmake-multi-platform.yml  copilot-setup-steps.yml  coverage.yml  textmate-test.yml
assets/: code.css  light-dark.js  main.css  settings-widget.html  test.html
bindings/: README.md
bindings/lsp/: lsp.cpp  lsp.hpp
bindings/node/: eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.base.json  tsconfig.json  tsconfig.test.json
bindings/test/: deep_nested_error.cow  deep_nested_error.cow.txt  directive_splice_error_span.cow  directive_splice_error_span.cow.txt  help.txt  lex_error.cow.txt  multiline_same_expansion_arg_error.cow.txt  nested_error.cow  nested_error.cow.txt  parse_error.cow.txt  same_line_arg_error.cow  same_line_arg_error.cow.txt  warning.cow  warning.cow.txt
build-wasm/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
build-wasm/lsp-wasm/: .tsbuildinfo  cowel.js
build-wasm/npm/: CHANGELOG.md  lsp-wasm-runner.js  package.json
build-wasm/ulight/: Makefile  cmake_install.cmake
docs/: .cowel_config.json  CNAME  example.js  index.cow  index.html  index.mmml  new_directives.cow  test.cow
docs/directives/: calc.cow  chars.cow  code.cow  comments.cow  files.cow  foreign.cow  formatting.cow  grammar.ebnf  lists-tables-headings.cow  macros.cow  math.cow  misc.cow  paragraphs.cow  references.cow  sections.cow  separators.cow  special.cow
docs/intro/: directives.cow  grammar.ebnf  lex_grammar.ebnf  semantics.cow  syntax.cow  themes.cow  type_grammar.ebnf
docs/npm/: README.md
editor/vscode/: .vscodeignore  README.md  eslint.config.mjs  language-configuration.json  package-lock.json  package.json  tsconfig.json
engine/src/: big_int_boost.cpp  builtin_directive_set.cpp  cli_options.cpp  content_policies.cpp  cowel_lib.cpp  directive_processing.cpp  document_generation.cpp  lex.cpp  parameters.cpp  print.cpp  regexp_boost.cpp  relative_file_loader.cpp  semantics.cpp  services.cpp
include/cowel/: ast.hpp  ast_fwd.hpp  base_behaviors.hpp  big_int.hpp  big_int_ops.hpp  builtin_directive_set.hpp  call_stack.hpp  collecting_logger.hpp  content_behavior.hpp  content_status.hpp  context.hpp  cowel.h  cowel_lib.hpp  diagnostic.hpp  directive_arguments.hpp  directive_behavior.hpp  directive_display.hpp  directive_processing.hpp  document_content_behavior.hpp  document_generation.hpp  document_sections.hpp  expression_kind.hpp  fwd.hpp  gc.hpp  integration_testing.hpp  invocation.hpp  json.hpp  lex.hpp  memory_resources.hpp  output_language.hpp  parameters.hpp  parse.hpp  parse_utils.hpp  print.hpp  regexp.hpp  relative_file_loader.hpp  services.hpp  settings.hpp  simple_bibliography.hpp  string_kind.hpp  (+5 more)
include/mmml/: annotated_string.hpp  annotation_span.hpp  annotation_type.hpp  assert.hpp  ast.hpp  base_behaviors.hpp  builtin_directive_set.hpp  code_span_type.hpp  code_string.hpp  code_string_span.hpp  content_behavior.hpp  context.hpp  diagnostic.hpp  diagnostic_highlight.hpp  diagnostics.hpp  directive_arguments.hpp  directive_behavior.hpp  directive_processing.hpp  directives.hpp  document_content_behavior.hpp  document_generation.hpp  document_sections.hpp  function_ref.hpp  fwd.hpp  html_writer.hpp  io.hpp  io_error.hpp  json.hpp  meta.hpp  parse.hpp  parse_utils.hpp  print.hpp  result.hpp  services.hpp  simple_bibliography.hpp  source_position.hpp  theme_to_css.hpp  to_chars.hpp  tty.hpp  ulight_highlighter.hpp
scripts/: make-theme-asset.sh
src/: diagnostics.cpp  html_writer.cpp  parse.cpp  parse_utils.cpp  tty.cpp
src/util/: boost-install.sh  file-to-array.py  generate-case-transform-cpp.py  generate-html-entities-cpp.py  transform-package-json.js
test/: README.md  alias.cow  big.cow  big.cow.html  comments.cow  compilation_stage.hpp  directive_arg_balanced_braces.bmd  directive_arg_unbalanced_brace.bmd  directive_arg_unbalanced_brace_2.bmd  directive_arg_unbalanced_through_brace_escape.bmd  directive_brace_escape_2.cow  directive_multiline_trailing_comma.cow  document_file_testing.hpp  highlight.cow  integers.cow  math.cow  paragraph_control.cow  paragraph_control.cow.html  paragraphs.cow  paragraphs.cow.html  paragraphs_deep.cow  paragraphs_deep.cow.html  syntax_highlight.cow  syntax_highlight.cow.html  test_valid.cpp
test/U/: ascii.mmml  blank.mmml  digits.mmml  empty.mmml  nonscalar.mmml  pilcrow.mmml
test/arguments/: comments_1.cow  comments_2.cow  ellipsis.cow  not_ellipsis.cow  string.cow  unbalanced_brace_1.cow  unbalanced_brace_2.cow  unbalanced_through_brace_escape.cow  unquoted.cow
test/arithmetic/: basic.cow  basic.cow.html  ceil.cow  ceil.cow.html  floor.cow.html  max.cow  max.cow.html  min.cow  min.cow.html  min_max.cow  min_max.cow.html  nearest.cow  nearest_away_zero.cow  nearest_away_zero.cow.html  neg.cow  neg.cow.html  trunc.cow
test/c/: ascii.mmml  blank.mmml  digits.mmml  empty.mmml  name_bad.mmml  name_good.mmml  nonscalar.mmml  pilcrow.mmml
test/codeblock/: trim.cow  trim.html
test/compare/: eq.cow  ge.cow.html  gt.cow.html  le.cow  ne.cow  ne.cow.html
test/convert/: float_to_str.cow.html  int_to_str.cow  int_to_str.cow.html  reinterpret_as_float.cow.html  reinterpret_as_int.cow  reinterpret_as_int.cow.html  str_to_str.cow  str_to_str.cow.html  unit_to_str.cow
test/highlight/: comments.cpp  comments.cpp.html  hello_world.cpp.html
test/lex/: balanced_braces.cow.lextest  group_3.cow  (+10 more)
tools/: coverage-llvm.sh  eslint-shared-rules.mjs  filter-lcov.py  generate-unicode-case-properties-cpp.py
(+949 files in other folders)
